app/assets/css/follow-up.css
ul#chat-UI {
	margin-bottom: 30px;
}
.discussion {
	list-style: none;
	margin: 0;
	padding: 0;
}
.discussion > li {
	padding: 25px 0;
	margin: 0;
	overflow: hidden;
	display: flex;
	position: relative;
}

.discussion > li:before {
	background: none repeat scroll 0 0 #eee;
	content: " ";
	height: 100%;
	left: 21px;
	position: absolute;
	top: 0;
	width: 2px;
}

#chat-UI.discussion > li:last-child:before {
	height: 45px;
}

#ticket-content-UI.discussion > li:before {
	top: 30px;
}

.discussion .avatar {
	border-radius: 100%;
	min-width: 40px;
	position: relative;
	margin-right: 12px;
}
.discussion .avatar img {
	display: block;
	max-width: 100%;
}

.self .avatar:after, .other .avatar:after, .self .avatar:before, .other .avatar:before {
	left: 94%;
	top: 22px;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.self .avatar:after, .other .avatar:after {
	border-color: rgba(250, 250, 250, 0);
	border-right-color: #fafafa;
	border-width: 9px;
	margin-top: -9px;
}
.self .avatar:before, .other .avatar:before {
	border-color: rgba(238, 238, 238, 0);
	border-right-color: #eeeeee;
	border-width: 8px;
	margin-top: -8px;
}
.private-comment-item.self .avatar:after, .private-comment-item.other .avatar:after {
	border-right-color: #FFC0CB;
}

.self .messages, .other .messages, .rt-hd-ticket-front-title{
	-ms-word-break:break-all;
  	word-break:break-all;
  	word-break:break-word;
  	-webkit-hyphens:auto;
  	-moz-hyphens:auto;
  	hyphens:auto;
}
.self .avatar {
	position: relative;
}

.messages {
	border: solid 1px #eee;
	background: #FAFAFA;
	padding: 10px;
	border-radius: 2px;
	width: 100%;
}
.messages p {
	margin: 0 0 0.2rem 0;
}
.messages time {
	color: #777;
    float: right;
}

.messages .comment_attechment {
	display: block;
	padding: 0;
	margin: 10px 0 5px;
	font-size: 12px;
}

.messages .comment_attechment li {
	display: inline-block;
	list-style: none;
	margin-right: 5px;
}

#private-comment{
	display: inline-block;
	font-size: 14px;
}

.add-savefollowup {
	float: right;
}

.add-followup-attachment {
	float: right;
	margin-right: 10px;
}

#attachment-files .rthd_delete_attachment {
	color: red;
	float: right;
	margin-left: 10px;
}

.private-comment-display{
	/*color: red;*/
	background: pink;
}

.followup-content {
	width:100%;
	padding: 0;
	height: 200px;
}
.followup-hash-url{
	text-decoration: none;
	color: inherit;
}

.helpdeskspinner{
	display:none;
}

#editedfollowupcontent, #editedticketcontent{
	width:100%;
}

.red-color{
	color: #d02600;
}

.edit-action-button button[type='button']{
	float: right;
}

#editfollowup{
	margin-right: 5px;
}

#rthd-ticket {
	width: 63%;
	float: left;
	margin-right: 2%;
}

#rthd-sidebar {
	width: 33%;
	float: left;
	margin-left: 2%;
	position: relative;
	-ms-word-break:break-all;
  	word-break:break-all;
  	word-break:break-word;
  	-webkit-hyphens:auto;
  	-moz-hyphens:auto;
  	hyphens:auto;
}

.rthd-container {
	margin: 10px;
	overflow: auto;
}

.rthd-ticket-description {
	-ms-word-break:break-all;
  	word-break:break-all;
  	word-break:break-word;
  	-webkit-hyphens:auto;
  	-moz-hyphens:auto;
  	hyphens:auto;
}

.rthd-clearfix {
	clear: both;
}
.editfollowuplink ,.edit-ticket-link, .show-original-email{
	color : #777;
}

.load-more{
	position: relative;
	border: 1px solid #f5f5f5;
}
.load-more:after, .load-more:before {
	right: 100%;
    top: 25px;
    border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.load-more:after {
	border-color: rgba(9, 59, 115, 0);
	border-right-color: #06C;
	border-width: 9px;
	margin-top: -7px;
}
.load-more:before {
	border-color: rgba(245, 245, 245, 0);
	border-right-color: #f5f5f5;
	border-width: 8px;
	margin-top: -8px;
}

#followup-load-more{
	display: inline-block;
	padding: 10px 20px;
	left: 39px;
}

.rthdcenter{
	text-align: center;
	width: 100%;
}
li.load-more-spinner-li {
	padding: 0;
}

.load-more-ul li a.load-more-block {
    border-radius: 50%;
    text-align: center;
    z-index: 1;
    height: 44px;
    padding: 5px;
	margin: 0;
}

.wp-admin .load-more-ul li a p {
	padding: 0;
}

.load-more-ul a p label {
	margin: 0;
}
.load-more-ul a:hover{
    cursor: pointer;
}

.load-more-ul li a {
    text-decoration: none;
	background: #06C;
	color: #fff;
	font-size: 20px;
}

.followup-information{
    margin-bottom: 10px;
}

.followup-information span,.followup-information span a{
    color: #06C;
}

.load-more-count {
    font-size: 10px;
    position: relative;
    top: -2px;
}

.load-more-block {
    height: 42px;
    line-height: 1;
    position: relative;
    width: 42px;
    z-index: 10;
}

#followup-load-more {
    display: inline-block;
    left: 20px;
    padding: 10px 20px;
	margin-right: 20px;
}

#followup-load-more-count{
    display: block;
}

.ticketcontent{
    border: 1px solid #BBB;
}

.ticketother .avatar:before {
    border-right-color: #bbb;
}

#followup-load-more:hover {
    background: #039;
}

#followup-load-more:hover:after {
    border-right-color: #039;
}

.load-more-ul li a:hover {
    background: #039;
}
.followup-information .private_comment_span{
	color: red;
}

.rt_original_email{
	word-wrap: break-word;
}

.rt-hd-ticket-info{
	border-bottom: 1px dotted #ddd;
	padding: 10px 0;
}

.rt-hd-ticket-history ul li{
	padding: 5px;
	margin: 5px 0px;
}

.rt-hd-ticket-history ul li mark{
	float: right;
}
.followup-note {
	font-size: 13px;
	color: grey;
}
#rthd-ticket-edit{
	float: right;
	padding: 5px;
}

#rthd-status-list {
	width: auto;
}

#rthd-change-status{
	padding: 5px;
}

#rthd-status-visiable{
	display: inline-block;
}
#ticket-information-edit-ticket-link {
	right: 0;
	position: absolute;
}

.rt-hd-ticket-info-header {
	display: inline;
}

.rthd_order_status{
	display: inline;
	float: right;
}

#savefollwoup, #submit-ajax, #rthd-add-followup-attachment {
	border-radius: 3px;
}

